test/sema/assignment-to-immutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

def main() {
    let i = 2;
    // CHECK: [[@LINE+1]]:7: error: cannot assign to immutable variable 'i'
    i = 1;
}
